--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@tweenjs/tween.js": "^25.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-grid-layout": "^1.5.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "sass": "^1.79.4",
