--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-grid-layout": "^1.5.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-typed": "^2.0.12",
     "sass": "^1.79.4",
     "three": "^0.169.0",
     "web-vitals": "^2.1.4"
