--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-typed": "^2.0.12",
     "sass": "^1.79.4",
     "three": "^0.169.0",
+    "vanta": "^0.5.24",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
