--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tweenjs/tween.js": "^25.0.0",
+    "framer-motion": "^11.11.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-grid-layout": "^1.5.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "react-typed": "^2.0.12",
     "sass": "^1.79.4",
     "three": "^0.169.0",
